--- a/C3-L07.qmd
+++ b/C3-L07.qmd
@@ -6,7 +6,7 @@ categories:
 keywords:
   - Mixture Models
   - Classification
-  - Naive Bayes Classifier
+  - Naïve Bayes Classifier
   - Notes
 ---
 
@@ -16,24 +16,24 @@ According to the instructor the main difference from clustering is that in class
 
 The fact that we have labels and a training set means we should know how many classes we have and we can use these labels to train a model and use it to predict the class of a new observation.
 
-\index{Naive Bayes classifier}
-The instructor mentions *Support Vector Machines* (SVM), *logistic regression* and *linear discriminant analysis* (LDA) as familiar examples of *classification methods*. These and a number of others are covered in [@james2013introduction]. We will focus on *Naive Bayes classifiers* as it is the most similar to mixture models and the EM algorithm which we have seen earlier
+\index{Naïve Bayes classifier}
+The instructor mentions *Support Vector Machines* (SVM), *logistic regression* and *linear discriminant analysis* (LDA) as familiar examples of *classification methods*. These and a number of others are covered in [@james2013introduction]. We will focus on *Naïve Bayes classifiers* as it is the most similar to mixture models and the EM algorithm which we have seen earlier
 
-## Mixture Models and naive Bayes classifiers 🎥{#sec-mixture-models-naive-bayes}
+## Mixture Models and Naïve Bayes classifiers 🎥{#sec-mixture-models-naïve-bayes}
 
 ![K-means clustering](images/c3l4-ss-04-classification-overview.png){.column-margin width="53mm"}
 
 
-![K-means clustering](images/c3l4-ss-05-classification-naive-bayes.png){.column-margin width="53mm"}
+![K-means clustering](images/c3l4-ss-05-classification-naïve-bayes.png){.column-margin width="53mm"}
 
 
 ![Mixture Models for Clustering](images/c3l4-ss-06-classification-mixtures.png){.column-margin width="53mm"}
 
 
-## Naive Bayes classifiers {sec-naive-bayes-classifiers}
+## Naïve Bayes classifiers {sec-naïve-bayes-classifiers}
 
-\index{Naive Bayes classifier}
-The idea of Naive Bayes classifiers is that we want to know what is the probability that observation i belongs to class k and we can obtain this using Bayes' theorem by computing the prior probability that an observation is in that class. This is just the frequency of the class multiplied by the density of that class and divided by the sum over the classes of the same expression.
+\index{Naïve Bayes classifier}
+The idea of Naïve Bayes classifiers is that we want to know what is the probability that observation i belongs to class k and we can obtain this using Bayes' theorem by computing the prior probability that an observation is in that class. This is just the frequency of the class multiplied by the density of that class and divided by the sum over the classes of the same expression.
 
 $$
 \mathbb{P}r(x_i \in \text{class}_k) = \frac{w_k \cdot g_k(x_i \mid \theta_k)}{\sum_{j=1}^K w_j \cdot g_j(x_i\mid \theta_j)}
@@ -47,16 +47,16 @@ $$
 \tilde{c}_i = \arg \max_k \mathbb{P}r(x_i \in \text{class}_k)\ for \; i=n+1,\ldots,n+m
 $$ {#eq-bayes-classifier-assign}
 
-The naive Bayes classifier assumes that the features are conditionally independent given the class. This means that the density of class k can be written as the product of the densities of each feature given the class:
+The naïve Bayes classifier assumes that the features are conditionally independent given the class. This means that the density of class k can be written as the product of the densities of each feature given the class:
 $$
 g_k(x_i\mid \theta_k) = \prod_{l=1}^p g_{kl}(x_{il}\mid\theta_{kl})
-$$ {#eq-naive-bayes-density}
+$$ {#eq-naïve-bayes-density}
 
 where $g_{kl}(x_{il} \mid \theta_{kl})$ is the density of feature $l$ given class $k$ and $\theta_{kl}$ is the parameter of feature $l$ given class $k$. This means that we can estimate the density of each feature separately and then multiply them together to get the density of the class.
 
 This is *a very strong assumption* and is not true in general. However, it works well in practice and is often used in text classification problems where the features are the words in the text.
 
-The **Naive Bayes classifier** is a special case of the mixture model where the components are the classes and the densities are the product of the densities of each feature given the class. This means that we can use the EM algorithm to estimate the parameters of the model in the same way as we did for the mixture model. The only difference is that we need to estimate the densities of each feature separately and then multiply them together to get the density of the class.
+The **Naïve Bayes classifier** is a special case of the mixture model where the components are the classes and the densities are the product of the densities of each feature given the class. This means that we can use the EM algorithm to estimate the parameters of the model in the same way as we did for the mixture model. The only difference is that we need to estimate the densities of each feature separately and then multiply them together to get the density of the class.
 
 
 ::: {.callout-note collapse="true"} 
