--- a/_C3-L07-T01.qmd
+++ b/_C3-L07-T01.qmd
@@ -1,6 +1,6 @@
 <!-- 
 _C3-L07-T01.qmd
-https://www.coursera.org/learn/mixture-models/lecture/5pvz2/mixture-models-and-naive-bayes-classifiers 
+https://www.coursera.org/learn/mixture-models/lecture/5pvz2/mixture-models-and-naïve-bayes-classifiers 
 -->
 
 The last class of problems for which mixture models are very useful is classification problems.  If you come from the machine learning literature, you will call this supervised classification to contrast, again, unsupervised classification that I called clustering before. The goal in supervised classification is to start with a training set and use the information in a training set to determine the classes or the labels of a second group of observations that you call the test set. So you start with a training set that contains known labels classes. You also have a test set that has unknown labels, and you want to use this information to make predictions about the test set labels. For example, you may want to decide whether a person suffers from a disease or not based on a set of medical tests, maybe P medical tests, and you have gone out and measured those tests in a number of individuals. So you know those individuals whether they are sick or they are not sick. Based on that training set that is labeled where you know what the real quality
@@ -25,7 +25,7 @@ procedures out there. This is a fairly common
 problem in the literature. You may be familiar with things like support vector machines or logistic regression
 for classification. I want to discuss today the similarities between
 using mixture models for classification and
-some techniques such as linear discriminant analysis, and in particular with Naive Bayes classifiers. The idea of Naive Bayes
+some techniques such as linear discriminant analysis, and in particular with Naïve Bayes classifiers. The idea of Naïve Bayes
 classifiers is very simple. So if you want to know what
 is the probability that observation i belongs to class k, you can typically obtain
 that by just using Bayes' theorem by computing the prior probability that an observation is in that class. That is typically
@@ -34,10 +34,10 @@ of the same expression. Now, again, this should
 be very familiar. This quantity here is
 essentially what we used both in the EM
 algorithm to compute the [inaudible] case and in the MCMC algorithm if you are fitting a mixture model from a Bayesian perspective to sample the class labels C sub x. So in other words, it's clear just from writing the expression
-from Naive Bayes that there should be a very
-close relationship between doing Naive Bayes
-and doing mixture models. In fact, you can cast Naive Bayes
-classifiers as just as a special case of mixture models. Let's discuss Naive
+from Naïve Bayes that there should be a very
+close relationship between doing Naïve Bayes
+and doing mixture models. In fact, you can cast Naïve Bayes
+classifiers as just as a special case of mixture models. Let's discuss Naïve
 Bayes classifiers where we use Gaussian kernels
 for the classification. Let's enter this a
 little bit of notation. So remember that we have both a test set and
@@ -51,7 +51,7 @@ last m are the test. In addition to this, because the training
 set is labeled, we're going to have C_1
 up to C_n are known, but C_1 or C_n plus
 1 up to C_m plus n are unknown and we
-want to protect them. Let's write a Naive
+want to protect them. Let's write a Naïve
 Bayes classifier that uses Gaussian kernels, and we're going to use the more general Gaussian
 kernels that we can. So in that case, the probability
 that observation i belongs to class k, it's going to be
@@ -81,12 +81,12 @@ for the training set, the training set
 you know the labels and you use those labels to compute the MLEs that
 get plugged into this. Now, with additional
 observations in those MLEs, you can decide what are
-the classes for them. So this is what a naive
+the classes for them. So this is what a naïve
 Bayes classifier based on Gaussian distributions for each one of the classes
 would look like. Now, this is exactly the same as the EM algorithm that we have discussed in the
 past for mixture models, if we make a couple of assumptions or if we incorporate a couple of assumptions
 into the algorithm. So let's write down that next. We can recast the
-algorithms that we just saw for naive Bayes
+algorithms that we just saw for naïve Bayes
 classifier based on Gaussian kernels
 in the context of the EM algorithm that we have been discussing
 for mixtures. That is very easy, we're going to think, again, about an E-step and an M-step, and we're going to add an additional post-processing
