--- a/_C3-L07-T02.qmd
+++ b/_C3-L07-T02.qmd
@@ -12,7 +12,7 @@ So let's start with a mixture model of the form, $f(x) =$ the sum from 1 to 2.
 So I'm going to be working only with two components of omega k, 1 over the square root 2pi to the p determinant of sigma to the -1 half, x- 1 half, x, mu sub k, transpose sigma inverse, x- mu sub k. 
 So this is two-component mixture with locations bearing with a component, but the same variance-covariance matrix for the two components that I have in the mixture. 
 
-And let's think about how the procedure would look like if we were to do Naive Bayes classification using this mixture. 
+And let's think about how the procedure would look like if we were to do Naïve Bayes classification using this mixture. 
 If I follow the unsupervised example that I have discussed before, the probability that I put observation i in class, 1, say, I only have two classes. 
 
 So as you see again, consider one of them and the other one is just 1- the numbers that I get here. 
@@ -83,7 +83,7 @@ If you were to do that, then you'd be in a situation that is analogous to this o
 
 But then, you can rearrange terms in such a way that now, you're going to have a quadratic form of $x$ being less than a certain threshold. And in that case, you're **separating hyperplane**.
 
-[Instead of being a hyperplane or line, it's going to be a quadratic form. And that is the reason why when you're doing Naive Bayes and you're working with kernels that are Gaussian and have different variance-covariance matrices, you call the procedure **quadratic discriminant analysis.**]{.mark} Because it uses a quadratic form, a parabola or something like that to separate the two classes that you're working with.
+[Instead of being a hyperplane or line, it's going to be a quadratic form. And that is the reason why when you're doing Naïve Bayes and you're working with kernels that are Gaussian and have different variance-covariance matrices, you call the procedure **quadratic discriminant analysis.**]{.mark} Because it uses a quadratic form, a parabola or something like that to separate the two classes that you're working with.
 
 The nice thing about thinking about this classification procedures in the context of mixture models is again, thinking about ways in which you can generalize and address the shortcomings of the procedure. 
 It's clear that the main issue with classification procedures based on Gaussians is that data in the real world sometimes doesn't look like multivariate Gaussian distributions. 
