--- a/C2-L09.qmd
+++ b/C2-L09.qmd
@@ -14,7 +14,7 @@ keywords:
 ---
 
 \index{regression!logistic}
-[Logistic regression is the preferred model when modelling a problem where the response variable is binary such as a classification or the outcome of a Bernoulli trial]{.mark}. In such the traditional least square fit suffers from a number of shortcomings. The main idea here is a log transform. However a naive approach this transform imposes issues with 0 valued inputs since $log(0)=-\infty$
+[Logistic regression is the preferred model when modelling a problem where the response variable is binary such as a classification or the outcome of a Bernoulli trial]{.mark}. In such the traditional least square fit suffers from a number of shortcomings. The main idea here is a log transform. However a naïve approach this transform imposes issues with 0 valued inputs since $log(0)=-\infty$
 
 ## Introduction to Logistic Regression 🎥 {#sec-intro-logistic-regression}
 
