--- a/C3-L06.qmd
+++ b/C3-L06.qmd
@@ -65,7 +65,12 @@ If components are well-separated, EM approximates hard assignments similar to K-
 Thus, viewing K-means as a special case of Gaussian mixture models clarifies its assumptions and guides principled extensions.
 
 
-## Clustering example {#sec-clustering-example}
+## Clustering example 🎥 {#sec-mixture-clustering-example}
+
+
+This video demonstrates clustering using the iris dataset, comparing K-means and a location and scale mixture model with $K$ normals. It highlights how mixture models can flexibly adapt to data structure, unlike K-means' rigid assumptions. The code is provided in 
+
+## Clustering example 📖 ℛ {#sec-clustering-code}
 
 \index{dataset!iris}
 
