--- a/references.qmd
+++ b/references.qmd
@@ -1,21 +1,19 @@
 ---
 title: "References"
 description: "Bibliography."
-format:
-  pdf:
-    geometry: 
-        - left=20mm
-        - top=20mm
-        - bottom=20mm
-        - right=20mm
+# format:
+#   pdf:
+#     geometry: 
+#         - left=20mm
+#         - top=20mm
+#         - bottom=20mm
+#         - right=20mm
 ---
 
 ## Bibliography
 
-:::: {.column-screen}
 ::: {#refs }
-
 :::
 
-::::
+
 
