--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -43,7 +43,7 @@ keywords:
 
 :::
 
-## AR(p) Definition and State-space Representation 🎥
+## AR(p) Definition and State-space Representation 🎥 {#sec-arp-defn-state-space-rep}
 
 ![AR(p) process, characteristic polynomial, stability, stationarity and MA representation ](images/m2_0001.png){#fig-ar-p-state-space-representation .column-margin  group="slides" width="53mm"}
 
@@ -96,12 +96,12 @@ $$
 \end{aligned}
 $$ {#eq-ar-poly-derivation}
 $$
-\Phi(z) = 1 - \phi_1 z - \phi_2 z^2 - \ldots - \phi_p z^p \qquad \text{(Characteristic polynomial)}
+\Phi(u) = 1 - \phi_1 u - \phi_2 u^2 - \ldots - \phi_p u^p \qquad \text{(Characteristic polynomial)}
 $$ {#eq-ar-poly}
 
 where:
 
-- $z \in \mathbb{C}$ i.e. complex-valued.
+- $u \in \mathbb{C}$ i.e. complex-valued roots
 - $\phi_j$ are the AR coefficients.
 
 
@@ -138,7 +138,8 @@ $$ {#eq-ar-stationary}
 where:
 
 - $\varepsilon_t$ is a white noise process with zero mean and constant variance $v$.
-- $\operatorname{B}$ is the lag operator AKA the backshift operator defined by $\operatorname{B} \varepsilon_t = \varepsilon_{t-1}$. This need to be applied to a time series $\varepsilon_t$ to get the lagged values.
+- $\operatorname{B}$ is the lag operator AKA the backshift operator defined by $\operatorname{B} \varepsilon_t = \varepsilon_{t-1}$. 
+  This need to be applied to a time series $\varepsilon_t$ to get the lagged values.
 - $\Psi(\operatorname{B})$ is the infinite order polynomial in $\operatorname{B}$ that represents a linear filter applied to the noise process.​
 - $\psi_t = 1$ is the weight for the white noise at time $t$.
 - the constraint $\psi_0 = 1$ ensures that the current shock contributes directly to $y_t$
@@ -176,7 +177,7 @@ It would be nice to state this explicitly and linked to the appropriate sections
 
 ### State Space Representation of AR(p) {#sec-state-space-ar-p}
 
-![A state space representation of Ar(p)](images/m2_0002.png){.column-margin  group="slides" width="53mm"}
+![A state space representation of Ar(p)](images/m2_0002.png){#fig-ar-p-state-space .column-margin  group="slides" width="53mm"}
 
 
 [Another important representation of the AR(P) process, is based on a state-space representation of the process. This representation is useful because it allows us to study some important properties of the process.]{.mark} We will make some connections with these representations later when we talk about dynamic linear models, is given as follows for an AR(P). 
@@ -184,36 +185,111 @@ It would be nice to state this explicitly and linked to the appropriate sections
 ~~I have my y_t. I can write it as F transpose and then another vector x_t here. Then we're going to have x_t is going to be a function of x_t minus 1. That vector there is going to be an F and a G. I will describe what those are in a second. Then I'm going to have another vector here with some distribution. In our case, we are going to have a normal distribution also for that one. In the case of the AR(P), we're going to have x_t to be y_t, y_t minus 1.~~
 
 $$
-y_t = F^\top \mathbf{x}_t \qquad \text{(observational equation)}
+y_t = \operatorname{F}^\top \mathbf{x}_t \qquad \text{(observational equation)}
 $$ {#eq-state-space-observational-equation}
 
 where:
-- $F$ is a linear mapping from the state space into the state space, so it is just  vector of coefficients, specifically $F = (1, 0, \ldots, 0)^\top$ for the AR(P) process.
+
+- $\operatorname{F}$ is a linear mapping from the state space into the state space, so it is just  vector of coefficients, specifically $F = (1, 0, \ldots, 0)^\top$ for the AR(P) process. The rank for this operator is $p$ since it has to match the dimension of the state vector $\mathbf{x}_t$.
 - $\mathbf{x}_t$ is a vector with the state of the process at time $t$.
+
+To demystify $\operatorname{F}$, it is just picking the current state from vector $\mathbf{x}_t$ with states for the p previous time steps.
 
 $$
 \mathbf{x}_t = G \mathbf{x}_{t-1} + \mathbf{w}_t \qquad \text{(state equation)}
 $$ {#eq-state-space-state-equation}
 
 where:
+
 - $\mathbf{x}_t$ is a vector of the current state of the process.
+- $G$ is a state transition matrix that describes the relationship between the current state and the previous state.
+- $\mathbf{x}_{t-1}$ is a vector of the previous state of the process.
+- $\mathbf{w}_t$ is a vector of *innovations* or noise at time $t$, which is assumed to be normally distributed with zero mean and constant variance. The first component is going to be the $\varepsilon_t$ and the rest of the components are going to be zero and the dimension of this vector is going to be $p$.
 
->It's a vector that has all these values of the y_t process. 
-> Then F is going to be a vector. 
-> It has to match the dimension of this vector. The first entry is going to be a one, and then I'm going to have zeros everywhere else. The w here is going to be a vector as well.
+\index{AR(p)!state transition matrix}
+and state transition matrix G
+
+The G matrix in this representation is going to be a very important matrix, the first row is going to contain the AR parameters, the AR coefficients, and we have $p$ of those. In the block below this is an identity matrix, and a zero column on it's right.
+
+
+$$
+G = \begin{pmatrix}
+\phi_1 & \phi_2 & \phi_3 & \dots & \phi_{p-1} & \phi_p \\
+1 & 0 & 0 & \dots & 0 & 0 \\
+0 & 1 & 0 & \dots & 0 & 0 \\
+\vdots & \ddots & \ddots & \ddots & & \vdots \\
+0 & 0 & 0 & \dots & 1 & 0
+\end{pmatrix}.
+$$ {#eq-ar-p-state-space-g-matrix}
+
+This state transition matrix G is important because it is related to the characteristic polynomial, in particular, is related to the reciprocal roots representation of the characteristic polynomial that we discussed before. 
+The structure of this G matrix is such that it captures the Markovian dynamics of the autoregressive process, wherein each $x_t$ is a function of $x_{t-1}$. 
+
+The eigenvalues of this matrix correspond precisely to the reciprocal roots of the characteristic polynomial. 
+
+Prado point out that if you perform the matrix operations described in @eq-state-space-observational-equation and @eq-state-space-state-equation, you will get back the form of your autoregressive process from the definition in @eq-ar-p-annotated
+
+So we have given the state-space representation of an AR(p). One advantage of working with this representation is that we can use with it some definitions that apply to dynamic linear models or state-space models. One such definition is the so-called forecast function.
+
+## Forecast Function of AR(p) 🎥 {#sec-forecast-function-ar-p}
+
+
+
+The forecast function, we can define it in terms of, I'm going to use here the notation f_t h to denote that is a function f that depends on the time t that you're considering, and then you're looking at forecasting h steps ahead in your time series. 
+
+$$
+\begin{aligned}
+f_t(h) &= E(y_{t+h} \mid y_{1:t}) \\
+       &= F^\top \mathbb{E}[x_{t+h} \mid y_{1:t}] \\
+       &= F^\top G \mathbb{E}[x_{t+h-1} \mid y_{1:t}] \\
+       &= F^\top G^h x_t, \quad h > 0, \quad \forall t \ge p
+\end{aligned}
+$$ {#eq-ar-p-forecast-function-derivation}
+
+If you have observations up to today and you want to look at what is the forecast function five days later, you will have h equals 5 there. It's just the expected value and we can just think of this as the expected value of $y_{t+h}.$ Conditional on all the observations or all the information you have received up to time $t$. 
+
+I'm going to write it just like this. Using the state-space representation, you can see that if I use the first equation and I think about the expected value of y_t plus h is going to be F transpose, and then I have the expected value of the vector x_t plus h in that case.
+I can think of just applying this, then I would have expected value of x_t plus h given y_1 up to t.
+But now when I look at the structure of x_t plus h, if I go to my second equation here, I can see that x_t plus h is going to be dependent on x_t plus h minus 1, and there is a G matrix here.
+I can write this in terms of the expected value of x_t plus h, which is just G, expected value of x_t plus h minus 1, and then I also have plus expected value of the w_t's.
+But because of the structure of the AR process that we defined, we said that all the Epsilon T's are independent normally distributed random variables center at zero. In this case, those are going to be all zero.
+I can write down this as F transpose G, and then I have the expected value of x_t plus h minus 1 given y_1 up to t.
+> If I continue with this process all the way until I get to time t, I'm going to get a product of all these G matrices here, and because we are starting with this lag h, I'm going to have the product of that G matrix h times. 
+> I can write this down as F transpose G to the power of h, and then I'm going to have the expected value of, finally, I get up to here.
 >
->The first component is going to be the Epsilon t. That we defined for the ARP process. Then every other entry is going to be a zero here. Again, the dimensions are going to match so that I get the right equations here. Then finally, my G matrix in this representation is going to be a very important matrix, the first row is going to contain the AR parameters, the AR coefficients.
-> We have p of those. That's my first row. In this block, I'm going to have an identity matrix. It's going to have ones in the diagonal and zeros everywhere else. I'm going to have a one here, and then I want to have zeros everywhere else. In this portion, I'm going to have column vector here of zeros. This is my G matrix. Why is this G matrix important? This G matrix is going to be related to the characteristic polynomial, in particular, is going to be related to the reciprocal roots of the characteristic polynomial that we discussed before. The eigenvalues of this matrix correspond precisely to the reciprocal roots of the characteristic polynomial. We will think about that and write down another representation related to this process. But before we go there, I just want you to look at this equation and see that if you do the matrix operations that are described these two equations, you get back the form of your autoregressive process. The other thing is, again, this is called a state-space representation because you have two equations here. One, you can call it the observational level equation where you are relating your observed y's with some other model information here. Then there is another equation that has a Markovian structure here, where x_t is a function of x_t minus 1. This is why this is a state-space representation. One of the nice things about working with this representation is we can use some definitions that apply to dynamic linear models or state-space models, and one of those definitions is the so-called forecast function. The forecast function, we can define it in terms of, I'm going to use here the notation f_t h to denote that is a function f that depends on the time t that you're considering, and then you're looking at forecasting h steps ahead in your time series. If you have observations up to today and you want to look at what is the forecast function five days later, you will have h equals 5 there. It's just the expected value. We are going to think of this as the expected value of y_t plus h. Conditional on all the observations or all the information you have received up to time t. I'm going to write it just like this. Using the state-space representation, you can see that if I use the first equation and I think about the expected value of y_t plus h is going to be F transpose, and then I have the expected value of the vector x_t plus h in that case. I can think of just applying this, then I would have expected value of x_t plus h given y_1 up to t. But now when I look at the structure of x_t plus h, if I go to my second equation here, I can see that x_t plus h is going to be dependent on x_t plus h minus 1, and there is a G matrix here. I can write this in terms of the expected value of x_t plus h, which is just G, expected value of x_t plus h minus 1, and then I also have plus expected value of the w_t's. But because of the structure of the AR process that we defined, we said that all the Epsilon T's are independent normally distributed random variables center at zero. In this case, those are going to be all zero. I can write down this as F transpose G, and then I have the expected value of x_t plus h minus 1 given y_1 up to t. If I continue with this process all the way until I get to time t, I'm going to get a product of all these G matrices here, and because we are starting with this lag h, I'm going to have the product of that G matrix h times. I can write this down as F transpose G to the power of h, and then I'm going to have the expected value of, finally, I get up to here.
+>This is simply is going to be just my x_t vector. 
+> I can write this down as F transpose G^h, and then I have just my x_t. 
+> Again, why do we care? Now we are going to make that connection with this matrix and the eigenstructure of this matrix. 
+> I said before, one of the features of this matrix is that the eigenstructure is related to the reciprocal roots of the characteristic polynomial. 
+> In particular, the eigenvalues of this matrix correspond to the reciprocal roots of the characteristic polynomial. 
+> If we are working with the case in which we have exactly p different roots. 
+> We have as many different roots as the order of the AR process. 
+> Let's say, p distinct.
+> We can write down then G in terms of its eigendecomposition. 
+> I can write this down as E, a matrix Lambda here, E inverse. 
 >
->This is simply is going to be just my x_t vector. I can write this down as F transpose G^h, and then I have just my x_t. Again, why do we care? Now we are going to make that connection with this matrix and the eigenstructure of this matrix. I said before, one of the features of this matrix is that the eigenstructure is related to the reciprocal roots of the characteristic polynomial. In particular, the eigenvalues of this matrix correspond to the reciprocal roots of the characteristic polynomial. If we are working with the case in which we have exactly p different roots. We have as many different roots as the order of the AR process. Let's say, p distinct.
->We can write down then G in terms of its eigendecomposition. I can write this down as E, a matrix Lambda here, E inverse. 
->
->Here, Lambda is going to be a diagonal matrix,
->you just put the reciprocal roots, I'm going to call those Alpha 1 up to Alpha p. They are all different. You just put them in the diagonal and you can use any order you want. But the eigendecomposition, the eigenvectors, have to follow the order that you choose for the eigenvalues. Then what happens is, regardless of that, you're going to have a unique G. But here, the E is a matrix of eigenvectors.
+> Here, Lambda is going to be a diagonal matrix, you just put the reciprocal roots, I'm going to call those Alpha 1 up to Alpha p. 
+> They are all different. 
+> You just put them in the diagonal and you can use any order you want. 
+> But the eigendecomposition, the eigenvectors, have to follow the order that you choose for the eigenvalues. 
+> Then what happens is, regardless of that, you're going to have a unique G. 
+> But here, the E is a matrix of eigenvectors.
 
-
-
-> Again, why do we care? Well, if you look at what we have here, we have the power G to the power of h. Using that eigendecomposition, we can get to write this in this form. Whatever elements you have in the matrix of eigenvectors, they are now going to be functions of the reciprocal roots. The power that appears here, which is the number of steps ahead that you want to forecast in your time series for prediction, I'm just going to have the Alphas to the power of h. When I do this calculation, I can end up writing the forecast function just by doing that calculation as a sum from j equals 1 up to p of some constants. Those constants are going to be related to those E matrices but the important point is that what appears here is my Alpha to the power of h. What this means is I'm breaking this expected value of what I'm going to see in the future in terms of a function of the reciprocal roots of the characteristic polynomial. You can see that if the process is stable, is going to be stationary, all the moduli of my reciprocal roots are going to be below one. This is going to decay exponentially as a function of h. You're going to have something that decays exponentially. Depending on whether those reciprocal roots are real-valued or complex-valued, you're going to have behavior here that may be quasiperiodic for complex-valued roots or just non-quasiperiodic for the real valued roots. The other thing that matters is, if you're working with a stable process, are going to have moduli smaller than one. The contribution of each of the roots to these forecasts function is going to be dependent on how close that modulus of that reciprocal root is to one or minus one. For roots that have relatively large values of the modulus, then they are going to have more contribution in terms of what's going to happen in the future. This provides a way to interpret the AR process.
+> We have the power G to the power of h. 
+> Using that eigendecomposition, we can get to write this in this form. 
+> Whatever elements you have in the matrix of eigenvectors, they are now going to be functions of the reciprocal roots. 
+> The power that appears here, which is the number of steps ahead that you want to forecast in your time series for prediction, I'm just going to have the Alphas to the power of h. 
+> When I do this calculation, I can end up writing the forecast function just by doing that calculation as a sum from j equals 1 up to p of some constants. 
+> Those constants are going to be related to those E matrices but the important point is that what appears here is my Alpha to the power of h.
+> What this means is I'm breaking this expected value of what I'm going to see in the future in terms of a function of the reciprocal roots of the characteristic polynomial. 
+> You can see that if the process is stable, is going to be stationary, all the moduli of my reciprocal roots are going to be below one. 
+> This is going to decay exponentially as a function of h.
+> You're going to have something that decays exponentially. 
+> Depending on whether those reciprocal roots are real-valued or complex-valued, you're going to have behavior here that may be quasiperiodic for complex-valued roots or just non-quasiperiodic for the real valued roots. 
+> The other thing that matters is, if you're working with a stable process, are going to have moduli smaller than one. 
+> The contribution of each of the roots to these forecasts function is going to be dependent on how close that modulus of that reciprocal root is to one or minus one. 
+> For roots that have relatively large values of the modulus, then they are going to have more contribution in terms of what's going to happen in the future. 
+> This provides a way to interpret the AR process.
 
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
@@ -227,17 +303,17 @@ where:
 
 ## Examples 🎥
 
-![AR(1)](images/m2_0011.png){.column-margin  group="slides" width="53mm"}
+![AR(1)](images/m2_0011.png){#fig-ar1-example .column-margin  group="slides" width="53mm"}
 
 
 
 
-![AR(2) two positive roots](images/m2_0012.png){.column-margin  group="slides" width="53mm"}
+![AR(2) two positive roots](images/m2_0012.png){#fig-ar2-two-positive-roots .column-margin  group="slides" width="53mm"}
 
 
 
 
-![AR(2) complex roots](images/m2_0013.png){.column-margin  group="slides" width="53mm"}
+![AR(2) complex roots](images/m2_0013.png){#fig-ar2-complex-roots .column-margin  group="slides" width="53mm"}
 
 
 ### **AR(1) Process**
@@ -296,7 +372,7 @@ This analysis connects **forecast behavior** to the **algebraic properties** of 
 
 ## ACF of the AR(p) 🎥
 
-![ACF of the AR(p)](images/m2_0021.png){.column-margin  group="slides" width="53mm"}
+![ACF of the AR(p)](images/m2_0021.png){#fig-acf-ar-p .column-margin  group="slides" width="53mm"}
 
 
 
@@ -481,7 +557,7 @@ pacf(yt, lag.max = 50, main = "sample PACF")
 
 ## The AR(p): Review 📖 {#sec-arp-review}
 
-### AR(p): Definition, stability, and stationarity
+### AR(p): Definition, stability, and stationarity {#sec-arp-definition-stability-stationarity}
 
 ::: {.callout-info}
 
@@ -527,19 +603,36 @@ $$
 
 with $\alpha_j$ being the reciprocal roots of the characteristic polynomial. For the process to be stable (and consequently stationary), $|\alpha_j| < 1$ for all $j = 1, \ldots, p$.
 
-### AR(p): State-space representation
+### AR(p): State-space representation {#sec-arp-state-space-representation}
 
 An AR(p) can also be represented using the following state-space or dynamic linear (DLM) model representation:
 
 $$
-y_t = F' x_t,
-$$
+y_t = F^{\top} x_t,
+$$ {#eq-ar-p-state-space-y}
 
 $$
 x_t = G x_{t-1} + \omega_t,
-$$
+$$ {#eq-ar-p-state-space-x}
 
-with $x_t = (y_t, y_{t-1}, \dots, y_{t-p+1})'$, $F = (1, 0, \dots, 0)'$, $\omega_t = (\epsilon_t, 0, \dots, 0)'$, and
+with 
+
+$$
+x_t = (y_t, y_{t-1}, \dots, y_{t-p+1})^{\top}
+$$ {#eq-ar-p-state-space-x-vector}
+
+where F is a mapping from the state vector to the observed variable:
+
+$$
+F = (1, 0, \dots, 0)^{\top}
+$$ {#eq-ar-p-state-space-f-vector}
+
+$$
+\omega_t = (\epsilon_t, 0, \dots, 0)^{\top}
+$$ {#eq-ar-p-state-space-omega-vector}
+
+\index{AR(p)!state transition matrix}
+and state transition matrix G
 
 $$
 G = \begin{pmatrix}
@@ -549,15 +642,17 @@ G = \begin{pmatrix}
 \vdots & \ddots & \ddots & \ddots & & \vdots \\
 0 & 0 & 0 & \dots & 1 & 0
 \end{pmatrix}.
-$$
+$$ {#eq-ar-p-state-space-g-matrix}
 
+\index{AR(p)!forecast function}
 Using this representation, the expected behavior of the process in the future can be exhibited via the forecast function:
 
 $$
-f_t(h) = E(y_{t+h} | y_{1:t}) = F' G^h x_t, \quad h > 0,
-$$
+f_t(h) = E(y_{t+h} \mid y_{1:t}) = F^\top G^h x_t, \quad h > 0, \quad \forall t \ge p
+$$ {#eq-ar-p-forecast-function}
 
-for any $t \ge p$. The eigenvalues of the matrix $G$ are the reciprocal roots of the characteristic polynomial.
+Where $G^h$ is the $h$-th power of the matrix $G$.
+The eigenvalues of the matrix $G$ are the reciprocal roots of the characteristic polynomial.
 
 ::: {.callout-note}
 ### Eigenvalues {.unnumbered}
@@ -578,7 +673,7 @@ $$
 f_t(h) = \sum_{j=1}^{p} c_{tj} \alpha_j^h.
 $$
 
-### ACF of AR(p)
+### ACF of AR(p) {#sec-arp-acf}
 
 For a general AR(p), the ACF is given in terms of the homogeneous difference equation:
 
@@ -594,7 +689,7 @@ $$
 
 with $p_j(h)$ being a polynomial of degree $m_j - 1$.
 
-### Example: AR(1)
+### Example: AR(1) {#sec-arp-example-ar1}
 
 We already know that for $h \ge 0$, $\rho(h) = \phi^h$. Using the result above, we have
 
@@ -604,7 +699,7 @@ $$
 
 and so to find $a$, we take $\rho(0) = 1 = a \phi^0$, hence $a = 1$.
 
-### Example: AR(2)
+### Example: AR(2) {#sec-arp-example-ar2}
 
 Similarly, using the result above in the case of two complex-valued reciprocal roots, we have
 
@@ -612,9 +707,13 @@ $$
 \rho(h) = a \alpha_1^h + b \alpha_2^h = c r^h \cos(\omega h + d).
 $$
 
-### PACF of AR(p)
 
-We can use the Durbin-Levinson recursion to obtain the PACF of an AR(p). 
+### PACF of AR(p) {#sec-arp-pacf}
+
+\index{PACF}
+\index{AR(p)!PACF}
+\index{Durbin-Levinson}
+We can use the Durbin-Levinson recursion to obtain the PACF of an AR(p). c.f. @sec-durbin-levinson.
 
 Using the same representation but substituting the true autocovariances and autocorrelations with their sampled versions, we can also obtain the sample PACF.
 
