--- a/references.bib
+++ b/references.bib
@@ -1585,3 +1585,11 @@ note = "Accessed 11/02/16",
   year={2012},
   publisher={Springer Netherlands}
 }
+
+@book{brockwell1991time,
+  title={Time series: theory and methods},
+  author={Brockwell, Peter J and Davis, Richard A},
+  year={1991},
+  publisher={Springer science \& business media}
+}
+
