added more material on Bayesian AR(p) inference

--- a/C4-L04.qmd
+++ b/C4-L04.qmd
@@ -238,7 +238,7 @@ where:
 \index{AR(p)!state transition matrix}
 and state transition matrix G
 
-The G matrix in this representation is going to be a very important matrix, the first row is going to contain the AR parameters, the AR coefficients, and we have $p$ of those. In the block below this is an identity matrix, and a zero column on it's right.
+The $G$ matrix in this representation is going to be a very important matrix, the first row is going to contain the AR parameters, the AR coefficients, and we have $p$ of those. In the block below this is an identity matrix, and a zero column on it's right.
 
 
 $$
