--- a/C4-L05.qmd
+++ b/C4-L05.qmd
@@ -29,7 +29,125 @@ keywords:
 
 ## Bayesian inference in the AR(p): Reference prior, conditional likelihood 🎥
 
-{{< lipsum 2 >}}
+![inference for AR(p)](images/m2_0031.png){#fig-ar-p-process .column-margin  group="slides" width="53mm"}
+
+
+### Model Setup
+
+we start with an AR(p) model as we define in the previous lesson:
+$$
+y_t = \phi_1 y_{t-1} + \ldots + \phi_p y_{t-p} + \varepsilon_t \qquad \varepsilon_t \stackrel{iid}{\sim} \mathcal{N}(0, v)
+$$ {#eq-arp-inf-model}
+
+but now we wish to infer:
+
+- $\phi_i$ the *AR(p)* coefficients and 
+- $v$ the innovation variance.
+
+### Conditional likelihood
+
+We make use of the autoregressive structure and rewrite $y_t$ conditionally on the previous $p$ values of the process and the parameters:
+
+$$
+(y_t \mid y_{t-1}, \ldots, y_{t-p}, \phi_1, \ldots, \phi_p) \sim \mathcal{N}\left (\sum_{j=1}^{p} \phi_j y_{t-j}, v\right )
+$$ {#eq-arp-inf-cond}
+
+We condition on the first $p$ values of the process. 
+The conditional distribution of $y_t$ given the previous $p$ values and parameters is normal with mean given by the weighted sum $\sum \phi_j y_{t-j}$ and variance $v$.
+
+
+the density for the first $p$ observations is given by:
+$$
+p(y_{(p+1):T}\mid y_{1:p}, \phi_1, \ldots, \phi_p, v) = \prod_{t=p+1}^{T} p(y_t | y_{t-1}, \ldots, y_{t-p}, \phi_1, \ldots, \phi_p, v)
+$$ {#eq-arp-inf-full-cond-likelihood}
+
+This product of conditionals yields the full conditional likelihood. 
+Each term is Gaussian and independent, given the past values and parameters.
+
+### Regression Formulation
+
+This is recast as a linear regression: response vector $\mathbf{y}$ starting from $y_{p+1}$ to $y_T$, design matrix $\mathbb{X}$ built from lagged values, and $\boldsymbol\beta$ as the AR coefficients $\phi_j$.
+
+$$
+\mathbf{y}= \mathbb{X}\boldsymbol \beta + \boldsymbol \varepsilon \qquad \varepsilon \sim \mathcal{N}(0, vI)
+$$ {#eq-arp-inf-regression}
+
+
+$$
+\mathbf{y} = \begin{pmatrix} y_{p+1} \\ y_{p+2} \\ \vdots \\ y_T \end{pmatrix}, \quad
+\boldsymbol \beta = \begin{pmatrix} \phi_1 \\ \phi_2 \\ \vdots \\ \phi_p \end{pmatrix}, \quad
+\mathbb{X} = \begin{pmatrix} y_{p} & y_{p-1} & \cdots & y_{1} \\ y_{p+1} & y_{p} & \cdots & y_{2} \\ \vdots & \vdots & \ddots & \vdots \\ y_{T-1} & y_{T-2} & \cdots & y_{T-p} \end{pmatrix}
+$$
+
+In the design matrix $\mathbb{X}$ each row corresponds to lagged observations used to predict the next value. This setup enables applying linear regression machinery.
+
+
+
+
+we can now infer the parameters by using the left generalized Moore Penrose inverse of $\mathbb{X}$ to obtain the maximum likelihood estimator (MLE) of the AR coefficients $\boldsymbol \beta$ 
+Assuming full-rank $\mathbb{X}$, this is the MLE. 
+
+$$
+\boldsymbol \beta_{MLE} = (\mathbb{X}^\top \mathbb{X})^{-1} \mathbb{X}^\top \mathbf{y}
+$$ {#eq-arp-inf-regression-mle}
+
+where:
+
+- $\mathbb{X}$ is the design matrix, 
+- $\boldsymbol \beta$ is the vector of AR coefficients, and 
+- $\mathbf{y}$ is the response vector.
+
+It matches the usual OLS solution in linear regression.
+
+### Reference prior and posterior distribution
+
+The reference prior reflects non-informative beliefs. This yields a conjugate posterior due to the Gaussian likelihood.
+
+$$
+p(\beta,v) \propto 1/v
+$$ {#eq-arp-inf-prior}
+
+$$
+(\boldsymbol \beta | \mathbf{y}_{:T}, v) \sim \mathcal{N}(\boldsymbol \beta_{MLE}, v (\mathbb{X}^\top \mathbb{X})^{-1})
+$$ {#eq-arp-inf-posterior-beta}
+
+The posterior is Gaussian with mean $\boldsymbol \beta_{MLE}$ and scaled covariance $v(\mathbb{X}^\top \mathbb{X})^{-1}$, analogous to the OLS variance.
+
+$$
+(v | \mathbf{y}_{:T}) \sim \text{Inverse-Gamma}\left(\frac{T - 2p}{2}, \frac{S^2}{2}\right)
+$$ {#eq-arp-inf-posterior-v}
+
+where:  
+
+- $S^2 = \sum_{t=p+1}^{T} (y_t - \mathbb{X} \boldsymbol \beta_{MLE})^2$ is the unbiased estimator of the variance $v$.
+- $T$ is the total number of observations.
+
+Posterior for $v$ is inverse gamma. The shape parameter is $(T - 2p)/2$ because the number of residual degrees of freedom is $T - 2p$ (residual = $T-p$ obs minus $p$ params). Scale is half the sum of squared residuals.
+
+### Simulation-based Inference
+
+Posterior sampling:
+
+- Draw $v$ from the inverse gamma posterior.
+- Plug $v$ into the posterior of $\boldsymbol\beta$ and sample from the Gaussian.
+
+This gives full Bayesian posterior samples of $(\boldsymbol\beta, v)$.
+
+
+### Summary
+
+- In this lesson, we discussed the Bayesian inference for the AR(p) process using the conditional likelihood and reference prior. 
+- We have established a connection between the AR(p) process and a regression model, allowing us to use standard regression techniques to estimate the parameters. 
+- The posterior distribution can be derived, and we can perform simulation-based inference to obtain samples from the posterior distribution of the AR coefficients and variance.
+
+::: {.callout-note collapse="true"}
+## Video Transcript {.unnumbered}
+
+<!-- TODO: summarize this transcript -->
+
+{{< include _C4-L05-T01.qmd >}}
+
+:::
 
 ## R code: Maximum likelihood estimation, AR(p), conditional likelihood 📖
 
@@ -400,15 +518,18 @@ abline(v = sd, col = 'red')
 
 ::: {.callout-note}
 
-#### ARMA Model Definition
+### ARMA Model Definition {.unnumbered}
 
+\index{ARMA process!definition}
 A time series process is a zero-mean autoregressive moving average process if it is given by
 
 $$
-y_t = \textcolor{red}
+\operatorname{ARMA}(p,q)= \textcolor{red}
                 {\underbrace{\sum_{i=1}^{p} \phi_i y_{t-i}}_{AR(P)}}
       + 
-      \textcolor{blue}{\underbrace{\sum_{j=1}^{q} \theta_j \epsilon_{t-j}}_{MA(Q)}} + \epsilon_t \qquad \text{(ARMA(p, q))}
+      \textcolor{blue}
+                {\underbrace{\sum_{j=1}^{q} \theta_j \epsilon_{t-j}}_{MA(Q)}} 
+      + \epsilon_t 
 $$ {#eq-arma-definition}
 
 with $\epsilon_t \sim N(0, v)$.
@@ -419,10 +540,10 @@ with $\epsilon_t \sim N(0, v)$.
 :::
 
 Next we will define the notions of stability and invertibility of an ARMA process.
+\index{ARMA process!stability}
 
 ::: {.callout-info}
-
-#### Stability Definition
+#### Stability Definition {.unnumbered}
 
 An ARMA process is **stable** if the roots of the AR characteristic polynomial [stable]{.column-margin}
 
@@ -438,10 +559,10 @@ This condition implies stationarity.
 
 :::
 
+\index{ARMA process!invertibility}
 
 ::: {.callout-info}
-
-#### Invertible ARMA Definition
+#### Invertible ARMA Definition {.unnumbered}
 
 An ARMA process is **invertible** if the roots of the MA **characteristic polynomial** given by [invertible]{.column-margin}
 
@@ -456,12 +577,12 @@ lie outside the unit circle.
 Note that $\Phi(B) y_t = \Theta(B) \epsilon_t$.
 
 - When an ARMA process is **stable**, it can be written as an infinite order moving average process.
-
 - When an ARMA process is **invertible**, it can be written as an infinite order autoregressive process.
 
-::: {.callout-info}
+\index{ARIMA process!definition}
 
-#### ARIMA Processes
+::: {.callout-info}
+#### ARIMA Processes {.unnumbered}
 
 An autoregressive integrated moving average process with orders $p$, $d$, and $q$ is a process that can be written as
 
